# TIc-Tac-Toe

./: .editorconfig  .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  alembic.ini  create_superuser.py  pyproject.toml  update_superuser.py
backend/app/: backend_pre_start.py  initial_data.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3b2e190b1663_initial_migration_create_users_table.py  README  ba52a6fe9545_add_game_and_move_tables_for_tic_tac_toe.py  fd865b4179f0_update_difficulty_column_to_enum.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: games.py  login.py  users.py
backend/app/core/: config.py  db.py  exceptions.py  game_engine.py  logger.py  security.py
backend/app/db/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  ai_service.py  game_service.py  user_service.py
backend/scripts/: prestart.sh
frontend/: .env.development  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: Board.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: DashboardPage.tsx  GamePage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/types/: index.ts
